# classdesc

./: .codeclimate.yml  .gitignore  .gitmodules  .travis.yml  Dockerfile  Doxyfile  Doxyversion  Makefile  README.md  RESTProcess-allCDs.h  RESTProcess_base.h  RESTProcess_epilogue.h  Realloc.h  checkpoint  classdesc.cc  classdesc.h  classdesc.sln  classdesc.vcxproj  classdescMP.h  classdescVersion.h  classdesc_access.h  classdesc_epilogue.h  createCDs.sh  dimension.h  dump-allCDs.h  dump_base.h  dump_epilogue.h  factory.h  function.h  functiondb.h  functiondb.sh  functiondb0.h  functiondb1.h  functiondb10.h  functiondb11.h  functiondb12.h  functiondb13.h  functiondb14.h  functiondb15.h  functiondb16.h  (+76 more)
.github/workflows/: ci-debug.yml  ci.yml  codeql-analysis.yml
RESTProcessExample/: Makefile  RESTProcessExample.cc  RESTProcessExample.h  RESTProcessExample.txt  RESTProcessExpected.txt  SimpleBuffer.h  SimpleBufferExample.cc  example.py  pyExample.cc
doc/: Makedoc  classdesc-common.tex  classdesc.bbl  classdesc.bib  classdesc.ps  classdesc.tex  fig1.eps  fig12.eps  polymorph-example.xmi  version.tex
doc/classdesc/: WARNINGS  classdesc.html  footnode.html  images.aux  images.pl  images.tex  index.html  internals.pl  labels.pl  node1.html  node10.html  node11.html  node12.html  node13.html  node14.html  node15.html  node16.html  node17.html  node18.html  node19.html  node2.html  node20.html  node21.html  node22.html  node23.html  node24.html  node25.html  node26.html  node27.html  node28.html  node29.html  node3.html  node30.html  node31.html  node32.html  node33.html  node34.html  node35.html  node36.html  node37.html  (+19 more)
examples/: Makefile  arr2D.h  checkpoint  graphnode.cc  graphnode.h  heat.cc  heat.vcproj  internal_type.cc  internal_type.h  meson.build  old-polymorph.cc  old-polymorph.h  polymorph.cc  polymorph.h  polymorph2.cc  polymorph2.h  ptrflag.cc  ptrflag.h  raster.c  raster.tcl  refnode.cc  refnode.h
heatbugs/: HeatSpace.h  Heatbug.cc  Heatbug.h  Heatbug.m  Heatbug.mh  HeatbugBatchSwarm.h  HeatbugExportCpp.cc  HeatbugExportObjc.m  HeatbugModelSwarm.h  HeatbugModelSwarm.m  HeatbugObserverSwarm.h  Makefile  readme.txt
include/: classdescVersion.h  classdesc_epilogue.h  json_pack_epilogue.h  meson.build  pack_base.h  pack_epilogue.h  polyAccessPack.h  polyAccessXMLPack.h  python_base.h  xml_pack_epilogue.h  xml_unpack_base.h  xsd_generate_base.h
java/: ConcreteCppObject.java  CppObject.java  JNIEx.cc  JNIEx.h  Makefile  compileClass.cc  depend  dumpClass.cc
javaExamples/: Example.h  JNIEx.java  JNIEx2.cc  JNIInterface.java  JNIProxy.java  JNIProxyInvocation.java  Makefile  ProxyEx.java  ProxyExInterface.java  ProxyInvocation.java  javaClassEx.cc  test.java  test1.java
lib/: meson.build
mpi-examples/: Makefile  arr2D.h  heat.cc  mandelbrot.cc  raster.c  raster.tcl
objc-examples/: Makefile  ObjCsupport.h  main.m  myCounter.cc  myCounter.h  readme.txt  write_objc.cc  writeobjc_base.h
pythonExample/: Makefile  example.py  proxy.py  pythonExample.cc  pythonExample.h
src/: classdesc.cc  meson.build
src/include/: dump_epilogue.h  javaClass_base.h  object.h  polyBase.h  xml_pack_epilogue.h
src/test/: Makefile  depend  meson.build  mpibuf_array.cc  namespacedEnum.cc  privateBase.h  stringInheritance.cc  stringInheritance.h  templateArgs.h  test1.xml  testConst.cc  testJsonStream.cc  testJsoncd.cc  testXMLcd.h  test_isa.cc  test_private.cc  test_stl.cc  ticket20-example.h
src/test/00/: t0009a.sh  t0011a.sh  t0013a.sh  t0015a.sh  t0017a.sh  t0020a.sh  t0030a.sh  t0038a.sh  t0044a.sh  t0053a.sh  t0055a.sh  t0063a.sh  t0064a.sh
src/test/c++11/: c++Features.cc  c++Features.h  moveOperators.cc
src/test/include/: anonNamespace.h  nestedClass.h  testExclude.h  testJsonSharedPtr.h  testRef.h  ticket43-example.h
template/: test
test/: Makefile  anonNamespace.cc  complex_tcl_args.cc  complex_tcl_args.h  cpdoexample.cc  cpdoexample.h  enumKeys.cc  enumKeys.h  exclude.cc  explicitTemplateArg.cc  explicitTemplateArg.h  hyphen_in_template_parameter.cc  hyphen_in_template_parameter.h  main.cc  miscMemberTypes.cc  miscMemberTypes.h  namespacedEnum.h  nestedClass.cc  nestedClass.h  privateBase.cc  privateEnum.cc  privateEnum.h  random_init.cc  referenceMember.cc  referenceMember.h  template-member-call.h  templateArgs.cc  testBinStream.cc  testBoundMethod.cc  testConst.cc  testConst.h  testContainersClear.cc  testDump.cc  testExclude.cc  testFnPtr.cc  testFnPtr.h  testJavaClass.cc  testJsonSharedPtr.cc  testJsoncd.h  testPackFunctor.cc  (+20 more)
test/00/: RESTProcessExample.sh  baseClassTypeName.sh  enumVals.sh  inheritedNested.sh  python.sh  python2.sh  (+54 more)
(+30 files in other folders)
