sources = [
 'nonNamespace.cc',
 'cpdoexample.cc',
 'enumKeys.cc',
 'exclude.cc',
 'miscMemberTypes.cc',
 'mpibuf_array.cc',
 'namespacedEnum.cc',
 'nestedClass.cc',
 'privateBase.cc',
 'privateEnum.cc',
 'random_init.cc',
 'stringInheritance.cc',
 'templateArgs.cc',
 'testBinStream.cc',
 'testConst.cc',
 'test_const_method.cc',
 'testContainersClear.cc',
 'testDump.cc',
 'testExclude.cc',
 'testFnPtr.cc',
 'testfunctional.cc',
 'test_isa.cc',
 'testJavaClass.cc',
 'testJsoncd.cc',
 'testJsonSharedPtr.cc',
 'testJsonStream.cc',
 'test_private.cc',
 'testRef.cc',
 'test_stl.cc',
 'testTypeName.cc',
 'testXML_base.cc',
 'testXMLcd.cc',
 'testXMLcd_other.cc',
 'testXSDgenerate.cc',
 'ticket20-example.cc',
 'ticket43-example.cc',
 'c++Features.cc',
 'moveOperators.cc',
 'type_traits_check.cc'
]
add_global_arguments('-DRECUR_MAX=50', '-DTR1', '-DHAVE_LONGLONG', language : 'cpp')
custom_target(sources, c_args: ['-w', '-MM'],)
